Use correct comment syntax; add missing padding

--- a/styles/animations.scss
+++ b/styles/animations.scss
@@ -1,6 +1,7 @@
 @import "./core/settings";
 
 .pageContainer {
+    padding-top: $navbar-height;
     padding-bottom: $l-footer-height;
 }
 
